--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta property="og:title" content="سكس ام رزان">
+<meta property="og:title" content="saxomrazan">
 <meta property="og:description" content="
                                          
                                          
